--- a/src/MarkdownSharp/MarkdownSharp.csproj
+++ b/src/MarkdownSharp/MarkdownSharp.csproj
@@ -1,15 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <PackageId>MarkdownSharp</PackageId>
-    <Description>Open source C# implementation of Markdown processor, as featured on Stack Overflow.</Description>
-    <PackageTags>markdown</PackageTags>
-    <TargetFrameworks>net40;netstandard2.0</TargetFrameworks>
-    <OutputTypeEx>Library</OutputTypeEx>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-  <ItemGroup Condition="$(TargetFramework) == 'net40'">
+
+  <ItemGroup>
     <Reference Include="System.Configuration" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0"/>
   </ItemGroup>
-  <ItemGroup Condition="$(TargetFramework) != 'net40'">
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+  <ItemGroup>
   </ItemGroup>
 </Project>
